# rust-example

./: README.md
adder/src/: lib.rs
common-collections/src/: main.rs
control-flow/src/: main.rs
crates-io/: Cargo.toml
crates-io/src/: lib.rs
defining-enum/src/: main.rs
error-handling/: Cargo.toml
error-handling/src/: main.rs
functional/src/: main.rs
generic-type/src/: lib.rs  main.rs
hello-world/: main
hello_macro/: Cargo.toml
hello_macro/src/: lib.rs  main.rs
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
iter/src/: lib.rs
match-control/src/: main.rs
minigrep/src/: lib.rs  main.rs
oop/: Cargo.toml
oop/src/: lib.rs
patterns/src/: main.rs
restaurant/src/: lib.rs
smart-pointer/: Cargo.toml
smart-pointer/src/: lib.rs  main.rs
thread/src/: main.rs
web_server/: Cargo.toml
web_server/src/: main.rs
web_server/src/html/: 404.html
